# disciplina_devops

./: LICENSE  README.md  dev_requirements.txt  env.yml  pyproject.toml  requirements.txt
.github/workflows/: package-ci.yml  publish-python-package.yml  publish-release.yml  python-package.yml
docs/: complexoperations.html  search.js
docs/complexoperations/: JustSomeMath.html  JustSomeString.html
src/apicomplexoperations/: main.py  requirements.txt
src/complexoperations/: JustSomeMath.py  JustSomeString.py
test/: test_JustSomeMath.py
test/apicomplexoperations/: test_main.py
test/complexoperations/: test_JustSomeMath.py  test_JustSomeString.py
